new end of validation

--- a/templates/conventions/avenant_list.html
+++ b/templates/conventions/avenant_list.html
@@ -12,7 +12,7 @@
                 <div class="fr-col-11">
                     <div class="fr-grid-row">
                         <p class="fr-m-0">
-                            Avenant du <span class="fr-ml-1v"><strong> {{convention.valide_le|date:"d F Y"|default_if_none:'-' }} </strong></span>:&nbsp;{% if convention.description_avenant %}
+                            Avenant {{convention.numero }} du <span class="fr-ml-1v"><strong> {{convention.valide_le|date:"d F Y"|default_if_none:'-' }} </strong></span>:&nbsp;{% if convention.description_avenant %}
                                 {{ convention.description_avenant|linebreaksbr }}
                             {% endif %}
                         </p>
@@ -26,7 +26,7 @@
             {% else %}
                 <div class="fr-col-11">
                     <div class="fr-grid-row">
-                        Avenant du <span class="fr-ml-1v"><strong> {{convention.valide_le|date:"d F Y"|default_if_none:'-' }} </strong></span>
+                        Avenant {{convention.numero }} du <span class="fr-ml-1v"><strong> {{convention.valide_le|date:"d F Y"|default_if_none:'-' }} </strong></span>
                         <div class="fr-ml-2w"><strong>{% include "conventions/home/statut_tag.html"  %}</strong></div>
                     </div>
                     <div class="fr-mb-3w fr-mt-n1v">
