--- a/templates/conventions/actions/instructeur_validation.html
+++ b/templates/conventions/actions/instructeur_validation.html
@@ -4,7 +4,7 @@
     <div class="fr-col-md-12 fr-mb-5w fr-mt-3w">
         <div role="alert">
             {% if convention.is_avenant %}
-                {% include "conventions/avenant/complete_form_for_avenants.html" %}
+                {% include "conventions/avenant/complete_form_for_avenants.html" with form=complete_for_avenant_form %}
             {% else %}
                 <p class="fr-alert__title">Valider la convention</p>
                 {% with editable_validation=convention|display_deactivated_because_type1and2_config_is_needed|not_op %}
