--- a/templates/conventions/avenant/complete_form_for_avenants.html
+++ b/templates/conventions/avenant/complete_form_for_avenants.html
@@ -1,5 +1,5 @@
 <p class="fr-alert__title">Valider l'avenant</p>
-{% if not convention.parent.programme.ville or not convention.parent.lot.nb_logements or not convention.parent.nom_fichier_signe %}
+{% if form %}
     <p class="fr-mb-0">Pour pouvoir valider cet avenant, vous devez remplir les informations suivantes concernant la convention originale.</p>
     <form method="post"  action="{% url 'conventions:validate' convention_uuid=convention.uuid %}" data-turbo="false"  enctype="multipart/form-data">
         {% csrf_token %}
@@ -29,36 +29,39 @@
         </div>
     </form>
 {% else %}
-    <div class="fr-col-md-12 block--row-strech">
-        {% if convention.numero and convention.numero != conventionNumberForm.convention_numero.value %}
+    <form method="post" action="{% url 'conventions:validate' convention_uuid=convention.uuid %}" data-turbo="false">
+        {% csrf_token %}
+        <div class="fr-col-md-12 block--row-strech">
             <div class="block--row-strech-1 fr-mr-6w">
-                <p class="fr-mb-0">Le bailleur a indiqué qu'il s'agissait de l'avenant numéro <strong>{{ convention.numero }}</strong>.</p>
-                <p>En fonction du nombre d'avenants répertoriés dans APiLos, il devrait porter le numéro {{conventionNumberForm.convention_numero.value}}</p>
-            </div>
-            <div><a href="{% url 'conventions:form_avenants_for_avenant' convention_uuid=convention.parent.uuid %}" class="fr-btn fr-btn--secondary fr-icon-upload-line fr-btn--icon-left">Importer les avenants précédents</a></div>
-        {% else %}
-            <div class="block--row-strech-1 fr-mr-6w">
-                {% if convention.numero %}
+                {% if convention.numero and convention.numero != conventionNumberForm.convention_numero.value %}
                     <p class="fr-mb-0">Le bailleur a indiqué qu'il s'agissait de l'avenant numéro <strong>{{ convention.numero }}</strong>.</p>
-                    <p>Cette déclaration est cohérente avec l'historique connu dans APiLos.</p>
+                    <p>En fonction du nombre d'avenants répertoriés dans APiLos, il devrait porter le numéro {{conventionNumberForm.convention_numero.value}}</p>
                 {% else %}
-                    <p class="fr-mb-0">L'avenant aura le numéro {{conventionNumberForm.convention_numero.value}}.</p>
+                    {% if convention.numero %}
+                        <p class="fr-mb-0">Le bailleur a indiqué qu'il s'agissait de l'avenant numéro <strong>{{ convention.numero }}</strong>.</p>
+                        <p>Cette déclaration est cohérente avec l'historique connu dans APiLos.</p>
+                    {% else %}
+                        <p>L'avenant aura le numéro {{conventionNumberForm.convention_numero.value}}.</p>
+                    {% endif %}
                 {% endif %}
-            </div>
-            <form method="post" action="{% url 'conventions:validate' convention_uuid=convention.uuid %}" data-turbo="false">
-                {% csrf_token %}
-                <input type="hidden"
+                <p class="fr-mb-0">Vous pouvez le valider avec ce numéro ou modifier le numéro ci-dessous avant de valider.</p>
+                <p><em>N'oubliez pas d'importer les avenants manquants, le cas échéant.</em></p>
+                <input class="fr-input fr-col-6"
                     id="{{conventionNumberForm.convention_numero.id_for_label}}"
                     name="{{conventionNumberForm.convention_numero.html_name}}"
-                    value="{{conventionNumberForm.convention_numero.value}}">
-                <button class="fr-btn fr-btn--secondary">
-                    Valider l'avenant
-                </button>
-            </form>
-        {% endif %}
-    </div>
+                    {% if convention.numero %}
+                        value="{{convention.numero}}"
+                    {% else %}
+                        value="{{conventionNumberForm.convention_numero.value}}"
+                    {% endif %}
+                >
+            </div>
+            <button class="fr-btn fr-btn--secondary">
+                Valider l'avenant {% if convention.numero and convention.numero != conventionNumberForm.convention_numero.value %}avec ce numéro{% endif %}
+            </button>
+        </div>
+    </form>
 {% endif %}
-
 
 
 
