--- a/templates/settings/edit_bailleur.html
+++ b/templates/settings/edit_bailleur.html
@@ -4,6 +4,14 @@
 
 {% block page_title %}Bailleur - APiLos{% endblock%}
 
+{% block javascript_extras %}
+    <script src="{% static "virtual-select/virtual-select.min.js" %}" nonce="{{request.csp_nonce}}"></script>
+{% endblock %}
+
+{% block css_extras %}
+    <link rel="stylesheet" href="{% static 'virtual-select/virtual-select.min.css' %}">
+{% endblock %}
+
 {% block content %}
     <div class="fr-container-fluid">
         <div class="fr-container">
@@ -28,11 +36,10 @@
 
                                 {% if not CERBERE_AUTH %}
                                     {% if request.user.is_superuser or request.user.administrateur_de_compte %}
-                                        {% if form.bailleur.field.choices|length > 0 and bailleur.bailleurs.count == 0 %}
-                                            {% include "common/form/input_select.html" with form_input=form.bailleur with_empty_option=True %}
+                                        {% if form.bailleur.field.queryset.count > 0 and bailleur.bailleurs.count == 0 %}
+                                            {% url 'users:search_parent_bailleur' bailleur_uuid=bailleur.uuid as search_bailleur_url %}
+                                            {% include "common/form/input_search_select.html" with form_input=form.bailleur queryset=form.bailleur.field.queryset field=form.bailleur.field.to_field_name url=search_bailleur_url %}
                                         {% endif %}
-                                    {% else %}
-                                        {% include "common/form/input_select.html" with form_input=form.bailleur editable=False %}
                                     {% endif %}
                                 {% endif %}
                                 {% if form.bailleur.value %}
