--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -3,61 +3,154 @@
 {% if not siap_operation %}
     <div class="fr-container">
         <div class="fr-grid-row fr-grid-row--gutters">
-            <div class="fr-col-md-12 ">
+            <div class="fr-col-md-12 fr-mb-2w">
                 <form class="fr-mt-2w" method="get" action="" id="search_table">
                     <input type="hidden" id="order_by" name="order_by" value="{{conventions.order_by}}">
                     <input type="hidden" id="page" name="page" value="{{conventions.page}}">
+                    {# Champs de recherche spécifiques (dépend du rôle de l'utilisateur) #}
                     <div class="fr-grid-row fr-grid-row--gutters">
-                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-5 fr-mb-2w">
-                            <input class="fr-input" placeholder="par nom, code d’opération ou ville" type="search" id="search_input" name="search_input" value="{{conventions.search_input}}">
+                        {# Champs bailleur #}
+                        {% if bailleur_query %}
+                            <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
+                                <div class="">
+                                    {% url 'users:search_bailleur' as search_bailleur_url %}
+                                    <select class="fr-select" name="bailleur" id="search-field-bailleur">
+                                        {% if conventions.bailleur %}
+                                            <option selected value="{{ conventions.bailleur.uuid }}">{{ conventions.bailleur }}</option>
+                                        {% else %}
+                                            <option selected value>Bailleur</option>
+                                            {% for bailleur in bailleur_query %}
+                                                <option value="{{ bailleur.uuid }}">
+                                                    {{ bailleur }}
+                                                </option>
+                                            {% endfor %}
+                                        {% endif %}
+                                    </select>
+                                </div>
+                                <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                                    VirtualSelect.init({
+                                        ele: '#search-field-bailleur',
+                                        search: true,
+                                        placeholder: "Bailleur",
+                                        selectedValue: null,
+                                        searchPlaceholderText: "Nom du bailleur",
+                                        onServerSearch: function (search, select) {
+                                            fetch('{{ search_bailleur_url }}?q=' + search)
+                                                .then((response) => response.json())
+                                                .then(data => select.setServerOptions(data));
+                                        },
+                                    });
+                                </script>
+                            </div>
+                        {% endif %}
+
+                        {# Champs administration #}
+                        {% if administration_query %}
+
+                            <div class="fr-col-12 fr-col-md-12 fr-col-lg-3">
+                                <div class="">
+                                    {% url 'users:search_administration' as search_administration_url %}
+                                    <select class="fr-select" name="administration" id="search-field-administration">
+                                        {% if conventions.administration %}
+                                            <option selected value="{{ conventions.administration.uuid }}">{{ conventions.administration }}</option>
+                                        {% else %}
+                                            <option selected value>Instructeur</option>
+                                            {% for administration in administration_query %}
+                                                <option value="{{ administration.uuid }}">
+                                                    {{ administration }}
+                                                </option>
+                                            {% endfor %}
+                                        {% endif %}
+                                    </select>
+                                    <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                                        VirtualSelect.init({
+                                            ele: '#search-field-administration',
+                                            search: true,
+                                            placeholder: "Instructeur",
+                                            selectedValue: null,
+                                            searchPlaceholderText: "Nom du l'administration'",
+                                            onServerSearch: function (search, select) {
+                                                fetch('{{ search_administration_url }}?q=' + search)
+                                                    .then((response) => response.json())
+                                                    .then(data => select.setServerOptions(data));
+                                            },
+                                        });
+                                    </script>
+                                </div>
+                            </div>
+                        {% endif %}
+
+                        {# Champs commune #}
+                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-3">
+                            <input class="fr-input" placeholder="Commune" type="text" name="ville" value="{{ conventions.ville|default_if_none:"" }}" />
                         </div>
+
+                        {# Champs département (réservé aux utilsiateurs staff) #}
+                        {% if request.user.is_staff %}
+                            <div class="fr-col-12 fr-col-md-12 fr-col-lg-3">
+                                <input class="fr-input" placeholder="Département" type="text" name="departement_input" value="{{ conventions.departement_input|default_if_none:"" }}" />
+                            </div>
+                        {% endif %}
+
+                        {# Champs de recherche génériques (affichés à tous les utilisateurs) #}
+                        {# Champs Statut #}
                         <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
-                            <div class="fr-select-group">
+                            <div class="">
                                 <select class="fr-select" id="cstatut" name="cstatut">
                                     <option value="">Statut</option>
                                     {% for statut in statuts %}
-                                        <option value="{{statut.value}}"
-                                            {% if statut.value  == conventions.statut_filter %}selected{% endif %}>
-                                            {{statut.label}}
+                                        <option value="{{ statut.0 }}"
+                                            {% if statut.0  == conventions.statut.name %}selected{% endif %}>
+                                            {{ statut.1 }}
                                         </option>
                                     {% endfor %}
                                 </select>
                             </div>
                         </div>
+                        {# Champs financement #}
                         <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
-                            <div class="fr-select-group">
+                            <div class="">
 
                                 <select class="fr-select" name="financement">
                                     <option value="">Financement</option>
                                     {% for financement in financements %}
-                                        <option value="{{financement.value}}"
+                                        <option value="{{ financement.value }}"
                                             {% if financement.value  == conventions.financement_filter %}selected{% endif %}>
-                                            {{financement.label}}
+                                            {{ financement.label }}
                                         </option>
                                     {% endfor %}
                                 </select>
                             </div>
                         </div>
-                        <div class="fr-col-1 fr-grid-row fr-grid-row--right">
-                            <button class="fr-btn fr-fi-search-line" title="Rechercher" id="search_btn">
-                            </button>
+
+                        {# Champs "Libre" (code opération / numéro de convention, code postal ou nom du programme) #}
+                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
+                            <input class="fr-input" placeholder="{% if active %}Code{% else %}N° convention{% endif %}, programme ou code postal" type="search" id="search_input" name="search_input" value="{{ conventions.search_input }}" />
                         </div>
-                    </div>
-                    {% if request.user.is_staff %}
-                        <div class="apilos-bordered fr-my-3w fr-col-12 fr-col-md-12 fr-col-lg-11">
-                            <p class="notes">
-                                <em>Les paramètres de recherche dans cet encadré sont disponibles uniquement pour les utilisateurs avancés.</em>
-                            </p>
-                            <div class="fr-grid-row fr-grid-row--gutters">
-                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
-                                    <label class="fr-label" for="search_input">
-                                        Préciser un département
+
+                        {# Champs ANRU #}
+                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
+                            <div class="fr-fieldset__element">
+                                <div class="fr-checkbox-group fr-checkbox-group--sm">
+                                    <input name="anru" id="checkbox-restrict-to-anru" type="checkbox" {% if conventions.anru %}checked{% endif %}>
+                                    <label class="fr-label" for="checkbox-restrict-to-anru">
+                                        ANRU
+                                        <span class="fr-hint-text">N'afficher que les conventions ANRU</span>
                                     </label>
-                                    <input class="fr-input" placeholder="Ex : 13" type="recherche" name="departement_input" value="{{conventions.departement_input}}">
+                                    <div class="fr-messages-group" id="checkboxes-hint-el-sm-3-messages" aria-live="assertive">
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    {% endif %}
+                    </div>
+
+                    <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--right">
+                        <button class="fr-btn" id="search_btn">
+                            <span class="fr-fi-search-line fr-mr-1w" aria-hidden="true"></span>
+                            Rechercher
+                        </button>
+                    </div>
+
                 </form>
             </div>
         </div>
