--- a/templates/conventions/avenant/search_for_avenant.html
+++ b/templates/conventions/avenant/search_for_avenant.html
@@ -6,42 +6,82 @@
 
 {% block content %}
     <div class="fr-container-fluid ds_banner">
-        <div class="fr-container">
-            <div class="fr-grid-row fr-grid-row--gutters">
-                <div class="fr-col-12 fr-col-lg-6 fr-my-5w">
-                    <div class="fr-mb-4w">
-                        <h2>Convention originale</h2>
-                        <p>Pour quelle convention souhaitez-vous créer un avenant ?</p>
+        {% if search_form %}
+            {# Recherche d'avenant en cours #}
+            <div class="fr-container">
+                <div class="fr-grid-row fr-grid-row--gutters">
+                    <div class="fr-col-12 fr-col-lg-6 fr-my-5w">
+                        <div class="fr-mb-4w">
+                            <h2>Convention originale</h2>
+                            <p>Pour quelle convention souhaitez-vous créer un avenant ?</p>
+                        </div>
+                        <form class="fr-my-3w" method="get" action="{% url 'conventions:search_for_avenant' %}" id="search_for_avenant">
+                            <div class="fr-mb-5w">
+                                <div class="fr-col-9 fr-mb-3w">
+                                    {% include "common/form/input_select.html" with form_input=search_form.departement editable=True without_empty_option=True with_empty_option=False %}
+                                </div>
+                                <div class="fr-col-9 fr-mb-3w">
+                                    {% include "common/form/input_number.html" with form_input=search_form.annee editable=True placeholder="Ex: 2022" %}
+                                </div>
+                                <div class="fr-col-9 fr-mb-3w">
+                                    {% include "common/form/input_text.html" with form_input=search_form.numero editable=True placeholder="Ex: 1234" %}
+                                </div>
+                            </div>
+                            <div class="fr-grid-row">
+                                <button class="fr-btn" title="Rechercher" id="search_btn">Etape suivante
+                                    <span class="fr-icon-arrow-right-s-line fr-ml-1w" aria-hidden="true"></span>
+                                </button>
+                            </div>
+                        </form>
                     </div>
-                    <form class="fr-my-3w" method="get" action="{% url 'conventions:search_for_avenant_result' %}" id="search_for_avenant">
-                        <div class="fr-mb-5w">
-                            <div class="fr-col-9 fr-mb-3w">
-                                <label class="fr-label" for="search_input">
-                                    Département<span class="fr-ml-1w warning-notification" title="(obligatoire)">*</span>
-                                </label>
-                                <input class="fr-input" placeholder="Ex : 13" type="recherche" name="departement" required>
-                            </div>
-                            <div class="fr-col-9 fr-mb-3w">
-                                <label class="fr-label" for="search_input">
-                                    Année de signature<span class="fr-ml-1w warning-notification" title="(obligatoire)">*</span>
-                                </label>
-                                <input class="fr-input" placeholder="Ex : 2022" type="recherche" name="annee" required>
-                            </div>
-                            <div class="fr-col-9 fr-mb-3w">
-                                <label class="fr-label" for="search_input">
-                                    4 derniers chiffres de votre numéro de convention<span class="fr-ml-1w warning-notification" title="(obligatoire)">*</span>
-                                </label>
-                                <input class="fr-input" placeholder="Ex : 1234" type="recherche" name="num" required>
-                            </div>
-                        </div>
-                        <div class="fr-grid-row">
-                            <button class="fr-btn" title="Rechercher" id="search_btn">Etape suivante
-                                <span class="fr-icon-arrow-right-s-line fr-ml-1w" aria-hidden="true"></span>
-                            </button>
-                        </div>
-                    </form>
                 </div>
             </div>
-        </div>
+        {% else %}
+
+            {# Recherche d'avenant soumise et valide #}
+            <div class="fr-container fr-my-5w">
+                <div class="fr-col-12 fr-col-lg-6">
+                    {% if conventions|length > 0 %}
+                        <h2>Confirmez votre choix</h2>
+                        <p>Vous allez créer un avenant pour la convention suivante.</p>
+                        {% for convention in conventions %}
+                            <div class="fr-card fr-card--no-arrow fr-p-4w fr-mb-3w">
+                                <div class="fr-grid-row">
+                                    <div class="fr-col-1 fr-my-auto"><span class="fr-icon-success-line apilos-icon-success fr-icon--lg" aria-hidden="true"></span></div>
+                                    <div class="fr-col-7 fr-pr-1w">
+                                        <div class="fr-mb-1w fr-text--bold apilos-overflow-hidden">
+                                            {{convention.programme.nom}}
+                                        </div>
+                                        {{convention.programme.ville}} - <strong>{{ convention.lot.financement|default_if_none:'' }}</strong>
+                                    </div>
+                                    <div class="fr-col-4 apilos-text--italic">
+                                        {{convention.numero}}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="fr-grid-row">
+                                {% if convention|display_create_avenant %}
+                                    <div class="fr-col-12 fr-col-lg-6">
+                                        <a class='fr-btn fr-mr-3w fr-mb-5w' href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">Créer un avenant
+                                            <span class="fr-icon-arrow-right-s-line fr-ml-1w" aria-hidden="true"></span></a>
+                                    </div>
+                                {% else %}
+                                    <div class="fr-col-12 fr-col-lg-6">
+                                        <button class="fr-btn" disabled> Un avenant est déjà en cours.</button>
+                                        <div>
+                                            <a class="fr-link fr-text--sm fr-mb-5w fr-mt-1w" href="{% url 'conventions:post_action' convention_uuid=convention.uuid  %}">Aller à la convention et ses avenants</a>
+                                        </div>
+                                    </div>
+                                {% endif %}
+                            </div>
+                        {% endfor %}
+                        <div class="fr-col-12 fr-col-lg-6 fr-mt-2w">
+                            <a class="fr-my-1w fr-link fr-text--sm" href="{% url 'conventions:search_for_avenant' %}">Changer de convention</a>
+                        </div>
+                    {% else %}
+                        {% include "conventions/avenant/new_convention_for_avenant.html" %}
+                    {% endif %}
+
+        {% endif %}
     </div>
 {% endblock %}
