--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -18,60 +18,62 @@
     <div class="fr-container-fluid ds_banner">
         {% include "conventions/common/form_header.html"%}
         {% include "common/step_progressbar.html"%}
-        <div class="fr-container">
-            <div class="fr-grid-row fr-grid-row--gutters">
-                <div class="fr-col-12">
-                    <h4 class="fr-mb-0">Entreprise bailleur</h4>
-                </div>
-                <div class="fr-col-12 fr-text--lg fr-mb-0">
-                    <strong>
-                        {{convention.bailleur.nom}}
-                    </strong>
-                </div>
-                <div class="fr-col-12 fr-col-lg-6">
-                    <div>{{convention.bailleur.adresse}}</div>
-                    <div>
-                        {{convention.bailleur.code_postal}} {{convention.bailleur.ville}}
-                    </div>
-                </div>
-                <div class="fr-col-12 fr-col-lg-6">
-                    <div class="fr-col-12">SIRET : {{convention.bailleur.siret}}</div>
-                    <div class="fr-col-12">Capital social : {{convention.bailleur.capital_social}}</div>
-                </div>
-                <hr class="fr-col-12 fr-my-3w">
-                {% if upform.bailleur.field.choices|length > 1 or upform.errors %}
+        {% with bailleur=convention.bailleur %}
+            <div class="fr-container">
+                <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-12">
-                        <div class="block--row-strech">
-                            <div class="block--row-strech-1 fr-mr-2w">
-                                <div class=" fr-text--lg fr-mb-0"><strong>Ce n'est pas le bon bailleur ? </strong></div>
-                                <div>Vous pouvez demander l'attribution de la convention à un autre bailleur en cliquant ci-dessous.</div>
-                            </div>
-                            <details {% if upform.errors %}open{% endif %} class="fr-mt-3w">
-                                <summary>
-                                    <div class="fr-btn">Changer le bailleur de la convention et de son opération</div>
-                                </summary>
-                                <div>
-                                    <form method="post" action="">
-                                        {% csrf_token %}
-                                        {% with convention_uuid_str=convention.uuid|stringformat:"s" %}
-                                            {% url 'users:search_bailleur' as search_bailleur_url %}
-                                            {% include "common/form/input_search_select.html" with form_input=upform.bailleur url=search_bailleur_url %}
-                                        {% endwith %}
-                                        <button class="fr-btn" name="change_bailleur" value="True">
-                                            Changer le bailleur
-                                        </button>
-                                    </form>
-                                </div>
-                            </details>
+                        <h4 class="fr-mb-0">Entreprise bailleur</h4>
+                    </div>
+                    <div class="fr-col-12 fr-text--lg fr-mb-0">
+                        <strong>
+                            {{bailleur.nom}}
+                        </strong>
+                    </div>
+                    <div class="fr-col-12 fr-col-lg-6">
+                        <div>{{bailleur.adresse}}</div>
+                        <div>
+                            {{bailleur.code_postal}} {{bailleur.ville}}
                         </div>
                     </div>
-                {% endif %}
-                <div class="fr-col-12 fr-mb-0 fr-text--sm"><em>Vous pouvez{% if upform.bailleur.field.choices%} également{% endif %} mettre à jour les informations de votre bailleur, si celles-ci sont erronées, dans
-                    <a href="{% url 'settings:edit_bailleur' bailleur_uuid=convention.bailleur.uuid %}" target="_blank" rel="noopener">votre espace d'administration</a></em>
+                    <div class="fr-col-12 fr-col-lg-6">
+                        <div class="fr-col-12">SIRET : {{bailleur.siret}}</div>
+                        <div class="fr-col-12">Capital social : {{bailleur.capital_social}}</div>
+                    </div>
+                    <hr class="fr-col-12 fr-my-3w">
+                    {% if upform.bailleur.field.choices|length > 1 or upform.errors %}
+                        <div class="fr-col-12">
+                            <div class="block--row-strech">
+                                <div class="block--row-strech-1 fr-mr-2w">
+                                    <div class=" fr-text--lg fr-mb-0"><strong>Ce n'est pas le bon bailleur ? </strong></div>
+                                    <div>Vous pouvez demander l'attribution de cette convention à un autre bailleur.</div>
+                                </div>
+                                <details {% if upform.errors %}open{% endif %} class="fr-mt-3w">
+                                    <summary>
+                                        <div class="fr-btn">Changer le bailleur de cette convention et de son opération</div>
+                                    </summary>
+                                    <div>
+                                        <form method="post" action="">
+                                            {% csrf_token %}
+                                            {% with convention_uuid_str=convention.uuid|stringformat:"s" %}
+                                                {% url 'users:search_bailleur' as search_bailleur_url %}
+                                                {% include "common/form/input_search_select.html" with form_input=upform.bailleur url=search_bailleur_url %}
+                                            {% endwith %}
+                                            <button class="fr-btn" name="change_bailleur" value="True">
+                                                Changer le bailleur
+                                            </button>
+                                        </form>
+                                    </div>
+                                </details>
+                            </div>
+                        </div>
+                    {% endif %}
+                    <div class="fr-col-12 fr-mb-0 fr-text--sm"><em>Vous pouvez{% if upform.bailleur.field.choices%} également{% endif %} mettre à jour les informations de votre bailleur, si celles-ci sont erronées, dans
+                        <a href="{% url 'settings:edit_bailleur' bailleur_uuid=convention.bailleur.uuid %}" target="_blank" rel="noopener">votre espace d'administration</a></em>
+                    </div>
+                    <hr class="fr-col-12 fr-my-3w">
                 </div>
-                <hr class="fr-col-12 fr-my-3w">
             </div>
-        </div>
+        {% endwith %}
         <div class="fr-container">
             <form method="post" action="">
                 {% csrf_token %}
