--- a/templates/conventions/collectif.html
+++ b/templates/conventions/collectif.html
@@ -4,7 +4,7 @@
 
 {% load custom_filters %}
 
-{% block page_title %}Annexes - APiLos{% endblock%}
+{% block page_title %}Collectif - APiLos{% endblock%}
 
 {% block javascript_extras %}
     <script src="{% static "js/comment-factory.js" %}" nonce="{{request.csp_nonce}}"></script>
